--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -233,7 +233,7 @@ blockquote {
 	position: relative;
 }
 .bg-image-1 {
-	background: url(asset-url("bgnosotros.jpg")) 50% 0px no-repeat;
+	background: url(asset-url("/images/bgnosotros.jpg")) 50% 0px no-repeat;
 }
 .bg-image-2 {
 	background: url("../images/bg-image-2.jpg") 50% 0px no-repeat;
