--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -12,6 +12,7 @@
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag "custom.js.erb" %>
   <%= csrf_meta_tags %>
 
    <!-- Mobile Meta -->
